[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "nnhealpix"
author = "Nicoletta Krachmalnicoff, Maurizio Tomasi"
author-email = "nkrach@sissa.it"
home-page = "https://github.com/ai4cmb/NNhealpix"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "DESCRIPTION.md"
requires = [
    "tensorflow>=2.0",
    "matplotlib >= 2.0",
    "numpy>=1.16",
    "healpy>=1.13.0",
    "setuptools>=46.1.3",
    "numba>=0.49.0",
    "scipy>=1.4.1"
]
requires-python = ">= 3.6"
